<resources>
    <string name="app_name">Assignment 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_1">Task 1</string>
    <string name="about_me">About Me</string>
    <string name="name">Manali Tawar</string>
    <string name="info">Just for fun doing Android Programming</string>
    <string name="image">image</string>
    <string name="go_back">Go Back</string>
    <string name="task1fragment">Task1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="test_title">Adrift</string>
    <string name="test_rating">Rating 4/5</string>
    <string name="test_desc">When a young nun at a cloistered abbey in Romania takes her own life, a priest with a haunted past and a novitiate on the threshold of her final vows are sent by the Vatican to investigate. Together they uncover the order’s unholy secret. Risking not only their lives but their faith and their very souls, they confront a malevolent force in the form of the same demonic nun that first terrorized audiences in “The Conjuring 2,” as the abbey becomes a horrific battleground between the living and the damned.</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="rating_4_5_10">Rating : 4.5/10</string>
    <string name="overview">Overview</string>
</resources>