<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/tile1"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profileView"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                app:srcCompat="@drawable/pp"
                android:contentDescription="@string/image"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:fontFamily="@font/almendra_display"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/buttonText"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/sub_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:fontFamily="@font/almendra_display"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="@dimen/buttonText"
                android:textAllCaps="true"/>

            <Button
                android:id="@+id/goBackToTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tile1"
                android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
                android:fontFamily="@font/almendra_display"
                android:gravity="center"
                android:text="@string/go_back"
                android:textSize="@dimen/buttonText"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>